--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "description": "",
   "dependencies": {
     "and": "^0.0.3",
-    "cors": "^2.8.5",
+    "cors": "^2.8.6",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
@@ -46,6 +46,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
