--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
     "winston": "^3.14.1",
     "xlsx": "^0.18.5"
   },
