--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "swagger-ui-express": "^5.0.1",
@@ -55,6 +56,7 @@
     "@types/node": "^20.14.2",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.6",
+    "@types/qrcode": "^1.5.6",
     "@types/sequelize": "^4.28.20",
     "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
